free sample and measurements links chnaged

--- a/about.html
+++ b/about.html
@@ -115,11 +115,11 @@
   
             <div class="col-lg-5 ">
                 <ul class="top-info-box">
-                <li class="header-get-a-quote">
-                    <a class="btn btn-primary" href="mailto:info@shadesandblindsme.com">Free Measurement</a>
+                  <li class="header-get-a-quote">
+                    <a class="btn btn-primary" href="https://wa.me/message/XU5OFOAMKOWEE1" target="_blank">Free Measurement</a>
                 </li>
                 <li class="header-get-a-quote">
-                    <a class="btn btn-primary" href="mailto:info@shadesandblindsme.com">Free Sample</a>
+                    <a class="btn btn-primary" href="https://wa.me/message/XU5OFOAMKOWEE1" target="_blank">Free Sample</a>
                 </li>
                 </ul>
                 <!-- Ul end -->
