--- a/index.html
+++ b/index.html
@@ -115,10 +115,10 @@
           <div class="col-lg-5 ">
               <ul class="top-info-box">
               <li class="header-get-a-quote">
-                  <a class="btn btn-primary" href="mailto:info@shadesandblindsme.com">Free Measurement</a>
+                  <a class="btn btn-primary" href="https://wa.me/message/XU5OFOAMKOWEE1" target="_blank">Free Measurement</a>
               </li>
               <li class="header-get-a-quote">
-                  <a class="btn btn-primary" href="mailto:info@shadesandblindsme.com">Free Sample</a>
+                  <a class="btn btn-primary" href="https://wa.me/message/XU5OFOAMKOWEE1" target="_blank">Free Sample</a>
               </li>
               </ul>
               <!-- Ul end -->
@@ -260,7 +260,7 @@
             <!-- Col end -->
             <div class="col-md-4 text-center text-md-right mt-3 mt-md-0">
               <div class="call-to-action-btn">
-                <a class="btn btn-dark" href="#contact">Request Quote</a>
+                <a class="btn btn-dark" href="https://wa.me/message/XU5OFOAMKOWEE1" target="_blank">Request Quote</a>
               </div>
             </div>
             <!-- col end -->
