--- a/index.html
+++ b/index.html
@@ -42,6 +42,15 @@
 
     gtag('config', 'UA-213156373-1');
   </script>
+<!-- Global site tag (gtag.js) - Google Ads: 10948993824 -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-10948993824"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-10948993824');
+</script>
 
 </head>
 
