--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="utf-8" />
   <title>Blinds, Curtains & Shades Dubai | Shades & Blinds </title>
@@ -51,9 +50,16 @@
 
   gtag('config', 'AW-10948993824');
 </script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZN790CN1WN"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-ZN790CN1WN');
+</script>
 </head>
-
 <body>
   <div class="body-inner">
   <div id="top-bar" class="top-bar">
